[metadata]
name = distinct_keywords
version = 0.22
author = Gireesan Namboothiri
author_email = sahyagiri@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sahyagiri/DistinctKeywords
project_urls =
    Bug Tracker = https://github.com/sahyagiri/DistinctKeywords/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = hilbert_curve, word2vec, key phrase extraction, 

[options]
install_requires=
	datrie
    flashtext
    gensim
    joblib
    nltk
    scikit_learn
    sortedcontainers
    spacy
	
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
